--- a/index.html
+++ b/index.html
@@ -30,8 +30,16 @@
 			</div>
 			<div class="modal-inner" id="modal-inner">
 				<h2>We ❤️ Your Data!</h2>
-				<p class="modal-text" id="modal-text">We have a strict policy on tracking and spamming: we'll definitely track you, and we'll definitely spam you. To use this site, enter your name and email address and accept our ridiculous terms and conditions.</p>				
-			</div>
+				<p class="modal-text" id="modal-text">We have a strict policy on tracking and spamming: we'll definitely track you, and we'll definitely spam you. To use this site, enter your name and email address and accept our ridiculous terms and conditions.</p>
+                <form id="consent-form">
+                    <input name="userName" type="text" placeholder="Enter your full name" required>
+                    <input name="userEmail" type="email" placeholder="Enter your email" required>
+                    <div class="modal-choice-btns" id="modal-choice-btns">
+                        <button id="accept-btn" class="modal-btn" type="submit">Accept</button>
+                        <button class="modal-btn">Decline</button>
+                    </div>
+                </form>
+            </div>
 		</div>
 		<script src="index.js"></script>
 	</body>
