--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 		<div class="modal" id="modal">
 			<div class="close-modal-btn-container">
-				<button class="modal-close-btn" id="modal-close-btn">X</button>
+				<button class="modal-close-btn" id="modal-close-btn" disabled>X</button>
 			</div>
 			<div class="modal-inner" id="modal-inner">
 				<h2>We ❤️ Your Data!</h2>
@@ -36,7 +36,7 @@
                     <input name="userEmail" type="email" placeholder="Enter your email" required>
                     <div class="modal-choice-btns" id="modal-choice-btns">
                         <button id="accept-btn" class="modal-btn" type="submit">Accept</button>
-                        <button class="modal-btn">Decline</button>
+                        <button id="decline-btn" class="modal-btn">Decline</button>
                     </div>
                 </form>
             </div>
